--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>Uvodni strana</title>
 </head>
 <body>
+<p><b>Does my browser support WebXR?</b><br/>
+<div>
+    <img id='canhazimg' style='width: 32px; float: left;'></img>
+    <p id='canhazwebxr' style='margin-left: 48px;'></p>
+</div>
 <script>
     function isMobile(global) {
         let check = false;
