--- a/putItems.html
+++ b/putItems.html
@@ -11,7 +11,7 @@
 <body>
 <header>
     <details open>
-        <summary>Hit Test</summary>
+        <summary>Hit Test aaa</summary>
         <p>
             This sample demonstrates the use of hit testing to place virtual objects on real-world surfaces.
             <a class="back" href="./">Back</a>
@@ -72,7 +72,7 @@
             textExitXRTitle: "EXIT  AR",
         });
         document.querySelector('header').appendChild(xrButton.domElement);
-
+        xrButton.enabled = true
         if (navigator.xr) {
             navigator.xr.isSessionSupported('immersive-ar')
                 .then((supported) => {
