--- a/putItems.html
+++ b/putItems.html
@@ -11,7 +11,7 @@
 <body>
 <header>
     <details open>
-        <summary>Hit Test</summary>
+        <summary>Hit Testddd</summary>
         <p>
             This sample demonstrates the use of hit testing to place virtual objects on real-world surfaces.
             <a class="back" href="./">Back</a>
@@ -79,6 +79,7 @@
                     xrButton.enabled = supported;
                 });
         }
+        xrButton.enable()
     }
 
     function onRequestSession() {
