--- a/putItems.html
+++ b/putItems.html
@@ -67,10 +67,10 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
     arObject.visible = false;
     scene.addNode(arObject);
 
-    let flower = new Gltf2Node({url: 'media/gltf/sunflower/sunflower.gltf'});
+    let flower = new Gltf2Node({url: 'sunflower/sunflower.gltf'});
     arObject.addNode(flower);
 
-    let reticle = new Gltf2Node({url: 'media/gltf/reticle/reticle.gltf'});
+    let reticle = new Gltf2Node({url: 'reticle/reticle.gltf'});
     reticle.visible = false;
     scene.addNode(reticle);
 
