--- a/putItems.html
+++ b/putItems.html
@@ -87,21 +87,11 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
     scene.clear = false;
 
     function initXR() {
-        xrButton = new WebXRButton({
-            onRequestSession: onRequestSession,
-            onEndSession: onEndSession,
-            textEnterXRTitle: "START AR",
-            textXRNotFoundTitle: "AR NOT FOUND",
-            textExitXRTitle: "EXIT  AR",
-        });
-        document.querySelector('header').appendChild(xrButton.domElement);
-
-        if (navigator.xr) {
-            navigator.xr.isSessionSupported('immersive-ar')
-                .then((supported) => {
-                    xrButton.enabled = supported;
-                });
-        }
+        return navigator.xr.requestSession('immersive-ar', {requiredFeatures: ['local', 'hit-test']})
+            .then((session) => {
+                xrButton.setSession(session);
+                onSessionStarted(session);
+            });
     }
 
     function onRequestSession() {
