--- a/putItems.html
+++ b/putItems.html
@@ -1,33 +1,10 @@
 <!doctype html>
-<!--
-Copyright 2018 The Immersive Web Community Group
-
-Permission is hereby granted, free of charge, to any person obtaining a copy of
-this software and associated documentation files (the "Software"), to deal in
-the Software without restriction, including without limitation the rights to
-use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
-the Software, and to permit persons to whom the Software is furnished to do so,
-subject to the following conditions:
-
-The above copyright notice and this permission notice shall be included in all
-copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
-FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
-COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
-IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
-CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
--->
 <html>
 <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no'>
     <meta name='mobile-web-app-capable' content='yes'>
     <meta name='apple-mobile-web-app-capable' content='yes'>
-    <link rel='icon' type='image/png' sizes='32x32'>
-    <link rel='icon' type='image/png' sizes='96x96'>
-    <link rel='stylesheet' href='css/common.css'>
 
     <title>Hit Test</title>
 </head>
@@ -49,7 +26,6 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
     import {Gltf2Node} from './js/render/nodes/gltf2.js';
     import {DropShadowNode} from './js/render/nodes/drop-shadow.js';
     import {vec3} from './js/render/math/gl-matrix.js';
-    import {Ray} from './js/render/math/ray.js';
 
     // XR globals.
     let xrButton = null;
@@ -89,10 +65,7 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
     function initXR() {
         xrButton = new WebXRButton({
             onRequestSession: onRequestSession,
-            onEndSession: onEndSession,
-            textEnterXRTitle: "START AR",
-            textXRNotFoundTitle: "AR NOT FOUND",
-            textExitXRTitle: "EXIT  AR",
+            textEnterXRTitle: "START AR"
         });
         document.querySelector('header').appendChild(xrButton.domElement);
 
@@ -144,12 +117,6 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
             session.requestAnimationFrame(onXRFrame);
         });
-    }
-
-    function onEndSession(session) {
-        xrHitTestSource.cancel();
-        xrHitTestSource = null;
-        session.end();
     }
 
     function onSessionEnded(event) {
