--- a/putItems.html
+++ b/putItems.html
@@ -46,7 +46,7 @@
     let flower = new Gltf2Node({url: 'sunflower/sunflower.gltf'});
     arObject.addNode(flower);
 
-    let reticle = new Gltf2Node({url: 'reticle/untitled.gltf'});
+    let reticle = new Gltf2Node({url: 'reticle/reticle.gltf'});
     reticle.visible = false;
     scene.addNode(reticle);
 
