--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Uvodni strana</title>
 </head>
 <body>
-<p><b>Does my browser support WebXR?vv</b><br/>
+<p><b>Does my browser support WebXR?yyy</b><br/>
 <div>
     <img id='canhazimg' style='width: 32px; float: left;'></img>
     <p id='canhazwebxr' style='margin-left: 48px;'></p>
