--- a/putItems.html
+++ b/putItems.html
@@ -43,10 +43,10 @@
     arObject.visible = false;
     scene.addNode(arObject);
 
-    let flower = new Gltf2Node({url: 'modely/sunflower/scene.gltf'});
+    let flower = new Gltf2Node({url: 'modely/viol/scene.gltf'});
     arObject.addNode(flower);
 
-    let reticle = new Gltf2Node({url: 'modely/reticle/scene.gltf'});
+    let reticle = new Gltf2Node({url: 'modely/reticle/reticle.gltf'});
     reticle.visible = false;
     scene.addNode(reticle);
 
