--- a/putItems.html
+++ b/putItems.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no'>
@@ -19,7 +19,7 @@
     </details>
 </header>
 <script type="module">
-    import {WebXRButton} from './util/webxr-button.js';
+    import {WebXRButton} from './js/util/webxr-button.js';
     import {Scene} from './js/render/scenes/scene.js';
     import {Renderer, createWebGLContext} from './js/render/core/renderer.js';
     import {Node} from './js/render/core/node.js';
