--- a/putItems.html
+++ b/putItems.html
@@ -19,7 +19,7 @@
     </details>
 </header>
 <script type="module">
-    import {WebXRButton} from './js/util/webxr-button.js';
+    import {WebXRButton} from './util/webxr-button.js';
     import {Scene} from './js/render/scenes/scene.js';
     import {Renderer, createWebGLContext} from './js/render/core/renderer.js';
     import {Node} from './js/render/core/node.js';
